removeLast() on List is a Java 21 method